vues privées espase membre + modif css bg-white

--- a/composer.json
+++ b/composer.json
@@ -78,8 +78,10 @@
         }
     },
     "require-dev": {
+        "symfony/debug-bundle": "6.1.*",
         "symfony/maker-bundle": "^1.43",
         "symfony/stopwatch": "6.1.*",
+        "symfony/var-dumper": "6.1.*",
         "symfony/web-profiler-bundle": "6.1.*"
     }
 }
